# hotel-revenue-management

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_demo.bat
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: competitors.py  demo.py  feedback.py  home.py  hotels.py  pricing.py  routes.py
app/core/: pricing.py
app/dashboard/: streamlit_app.py
app/db/: __init__.py  competitors.py  constraints.py  database.py  feedback.py  hotels.py  lifecycle.py  metrics.py  model.py  recommendations.py  seed.py  serializers.py  session.py
app/schemas/: __init__.py  competitors.py  constraints.py  demo.py  feedback.py  hotels.py  metrics.py  pricing.py  recommendations.py
app/services/: __init__.py  competitors.py  demo.py  feedback.py  hotels.py  learning.py  pricing_service.py  recommendations.py
scripts/: init_db.py  run_demo.py
tests/: test_api.py  test_learning.py  test_pricing.py
